# prevox

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LLM_CONTEXT.md  MUSICAL_GRAMMAR.md  PHILOSOPHY.md  README.md  REFERENCES.md  ROADMAP.md  VISION.md  pyproject.toml
.github/: pull_request_template.md
docs/: analysis-passes.md  capabilities.md  midi-preview-workflow.md
docs/adr/: 0001-separate-intent-and-music-ir.md  0002-relative-musical-time.md  0003-voice-not-track.md  0004-immutable-composition-state.md  0005-temporal-motif-transformations.md  0006-diagnostics-as-values.md  0007-add-read-only-analysis-passes.md  0008-midi-render-profiles.md  0009-backend-local-drum-preview.md  0010-theory-and-melody-analyses.md  README.md
examples/: README.md  analyze_melody_hooks.py  export_drum_preview_midi.py  export_manual_trace_midi.py  export_multi_voice_midi.py  export_theory_cohesion_midi.py  manual_trace.py
src/prevox/: __init__.py  analysis.py  diagnostics.py  inspection.py  manual_example.py  theory.py
src/prevox/domain/: __init__.py  _values.py  evaluation.py  intent.py  music.py  state.py
src/prevox/export/: __init__.py
src/prevox/export/midi/: __init__.py  renderer.py
src/prevox/transforms/: __init__.py  motif.py
tests/: test_analysis.py  test_architecture.py  test_diagnostics.py  test_evaluation.py  test_intent.py  test_manual_example.py  test_midi_export.py  test_music.py  test_semantics.py  test_theory.py  test_transforms.py
tests/golden/: drum_preview_midi.txt  manual_trace.txt  manual_trace_midi.txt  multi_voice_midi.txt
