[project]
name = "prevox"
version = "0.1.0"
description = "A compiler and runtime for procedural music composition"
authors = [
    {name = "Skyler Saville",email = "skylersaville@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "prevox", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
