[project]
name = "prevox"
version = "0.1.0"
description = "A compiler and runtime for procedural music composition"
authors = [
    {name = "Skyler Saville",email = "skylersaville@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mido (>=1.3,<2)"
]

[tool.poetry]
packages = [{include = "prevox", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
